fixes on admin roles