@@ -298,10 +298,35 @@ public class WorkflowBusiness {
         }
     }
 
-    public List<Simulation> getSimulations(String userEmail, String application, String status,
+    public List<Simulation> getSimulations(String userName, String application, String status,
             Date startDate, Date endDate) throws BusinessException {
 
-        return getSimulations(userEmail, application, status, startDate, endDate, null);
+        return getSimulations(userName, application, status, startDate, endDate, null);
+    }
+
+    public List<Simulation> getSimulations(String userName, String application, String status, Date startDate, Date endDate, String tag) throws BusinessException {
+        WorkflowStatus wStatus = (status != null) ? WorkflowStatus.valueOf(status) : null;
+        List<String> users = (userName != null) ? Collections.singletonList(userName) : Collections.emptyList();
+        List<String> applications = (application != null) ? Collections.singletonList(application) : new ArrayList<>();
+        List<Simulation> simulations = new ArrayList<>();
+
+        try {
+            if (endDate != null) {
+                Calendar calendar = Calendar.getInstance();
+                calendar.setTime(endDate);
+                calendar.add(Calendar.DATE, 1);
+                endDate = calendar.getTime();
+            }
+
+            simulations = parseWorkflows(workflowDAO.get(users, applications, wStatus, null, startDate, endDate, tag));
+            checkRunningSimulations(simulations);
+
+            return simulations;
+
+        } catch (WorkflowsDBDAOException ex) {
+            logger.error("Error searching simulations for users {}", users, ex);
+            throw new BusinessException(ex);
+        }
     }
 
     private List<Workflow> getSimulationsAdminGroup(String userEmail, List<String> filterApplications, 
@@ -331,15 +356,15 @@ public class WorkflowBusiness {
         }
     }
 
-    public List<Simulation> getSimulations(String userEmail, String application, String status, Date startDate, Date endDate, String tag)
+    public List<Simulation> getSimulationsWithGroupAdminRights(User user, String application, String status, Date startDate, Date endDate, String tag)
             throws BusinessException {
         
         WorkflowStatus wStatus = (status != null) ? WorkflowStatus.valueOf(status) : null;
-        List<String> users = (userEmail != null) ? configurationBusiness.getUserNames(userEmail, true) : Collections.emptyList();
+        List<String> users = List.of(user.getFullName());
         List<String> applications = (application != null) ? Collections.singletonList(application) : new ArrayList<>();
 
         List<Simulation> simulations = new ArrayList<>();
-        Set<Workflow> workflows = new HashSet<>();
+        List<Workflow> workflows = new ArrayList<>();
 
         try {
             if (endDate != null) {
@@ -349,13 +374,13 @@ public class WorkflowBusiness {
                 endDate = calendar.getTime();
             }
 
-            if (userEmail != null) {
-                workflows.addAll(getSimulationsAdminGroup(userEmail, applications, wStatus, startDate, endDate, tag));
-            }
-
+            workflows.addAll(getSimulationsAdminGroup(user.getEmail(), applications, wStatus, startDate, endDate, tag));
             workflows.addAll(workflowDAO.get(users, applications, wStatus, null, startDate, endDate, tag));
 
-            simulations = parseWorkflows(new ArrayList<>(workflows));
+            workflows = new ArrayList<>(workflows.stream().collect(
+                    Collectors.toMap(Workflow::toString, w -> w, (e, r) -> e)).values());
+
+            simulations = parseWorkflows(workflows);
             checkRunningSimulations(simulations);
 
             return simulations;
